navbar stuck to the top of page - scss added to ensure that section fills 100% of viewport and adds 1rem padding either side

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -26,6 +26,8 @@
     margin-bottom: 3%;
     z-index: 100;
     padding-bottom: 0.25rem;
+    position: sticky;
+    top: 0;
 
 }
 
