--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,32 @@
+@import "config/colours";
+
+// ensures navbar is a the the very top of the page with no gap
 body {
     margin: 0px;
+}
+
+//ensures that vieport is 100% filled by section
+html,
+body,
+section {
+    padding: 0;
+    margin: 0;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+section {
+    min-height: 100%;
+    box-sizing: border-box;
+    padding: 1rem 1rem 0;
+}
+
+
+// smooth scrolling for anchor links attached to navbar
+html {
+    scroll-behavior: smooth;
+    scrollbar-color: $secondary-yellow $white;
 }
